syntax = "proto3";

option csharp_namespace = "Microservice.Smart.Api.Contracts";

package distance;

service DistanceInfo {
	rpc GetDistance (Cities) returns (DistanceData);
}

message Cities {
	string originCity = 1;
	string destinationCity = 2;
}

message DistanceData {
	string miles = 1;
}